Fix(resto): text-overflow

--- a/style_omf_restaurant.scss
+++ b/style_omf_restaurant.scss
@@ -199,11 +199,20 @@ h4 {
   text-overflow: ellipsis; /*disparition du texte et points de suspensions*/
   white-space: nowrap;
 }
+
 .detail_entree {
+  width: 100%;
   font-size: 15px;
-  text-overflow: ellipsis; /*disparition du texte et points de suspentions*/
   white-space: nowrap;
-}
+  overflow: hidden;
+  text-overflow: ellipsis; /*disparition du texte et points de suspentions*/
+  }
+  .card_menu:hover .detail_entree{
+margin-right: -60px;
+text-overflow: ellipsis; /*disparition du texte et points de suspentions*/
+
+transition: all 0.6s linear;
+  }
 .somme {
   font-weight: bold;
   display: flex;
